# kornia-rs

crates/kornia-vlm/: Cargo.toml  ONNX_PROTOTYPE.md
crates/kornia-vlm/src/: lib.rs  types.rs
crates/kornia-vlm/src/backend/: mod.rs  onnx.rs
crates/kornia-vlm/src/context/: mod.rs  ort_ctx.rs
crates/kornia-vlm/src/paligemma/: mod.rs
crates/kornia-vlm/src/paligemma/ort/: mod.rs  preprocessor.rs  text.rs  vision.rs
tests/data/: dummy_tokenizer.json  language_model.onnx  vision_model.onnx
