[package]
name = "kornia-vlm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Vision Language Models in Rust"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
include = { workspace = true }

[dependencies]
candle-core = { workspace = true, optional = true }
candle-examples = { workspace = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
circular-buffer = { version = "1.1.0" }
hf-hub = { workspace = true }
kornia-image = { workspace = true }
kornia-imgproc = { workspace = true }
kornia-io = { workspace = true }
kornia-tensor = { workspace = true }
log = { workspace = true }
minijinja = { version = "2.12.0", features = ["loader"] }
num2words = "1.2.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true, optional = true }
ort = { version = "2.0.0-rc.9", optional = true, features = ["ndarray", "half"] }
ndarray = { version = "0.15.6", optional = true }
half = { version = "2.3.1", optional = true }

[dev-dependencies]
env_logger = { workspace = true }
rand = "0.9.0"

[features]
default = ["ort-backend"]
ort-backend = ["dep:ort", "dep:ndarray", "dep:half", "dep:tokenizers"]
candle-backend = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "candle-backend"]
flash-attn = ["candle-transformers/flash-attn", "candle-backend"]